# nexo-plugin-email

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  nexo-plugin.toml
.github/workflows/: ci.yml  release.yml
src/: auto_discovery.rs  boot.rs  config.rs  configured_state.rs  env_config.rs  events.rs  imap_conn.rs  inbound.rs  instance_registry.rs  lib.rs  loop_prevent.rs  main.rs  metrics.rs  mime_build.rs  mime_parse.rs  outbound.rs  outbound_queue.rs  plugin.rs  provider_hint.rs  reload.rs  runtime_handle.rs  smtp_conn.rs  subprocess_dispatch.rs  threading.rs
src/tool/: context.rs  dispatcher_stub.rs  imap_op.rs  label.rs  reply.rs  send.rs
tests/: configure_boot.rs  configure_path.rs  credentials_path.rs  e2e_multi_instance.rs  manifest_parse.rs  pipeline_in_process.rs  subprocess_handshake.rs
